1.7.2
-----
1. Allow editable combo-box popup to be rounded.
2. For windows build, set FramelessWindowHint when setting WA_TranslucentBackground
3. Always use flat background kwin, custom background messes up some aurorae
   decorations.
4. Update Chinese translations.
5. Set/clear widget masks when compositing toggled.

1.7.1
-----
 1. Remove kmix 'fix', and ue a proper fix! Dont access QWidgets' winId unless
    "w->testAttribute(Qt::WA_WState_Created) && w->internalWinId()" Thanks to
    Thomas Lübking
 2. Set XProperties on show event.
 3. Fix saving of 'thin' options.
 4. Only disable opacity for titlebar, if using kwin configured setting and blending
    menubars (or using menubar colour).
 5. Set KDE SC 4.6 'AbilityUsesBlurBehind' kwin setting if decoration or style supports
    opacity.
 6. Fix 'rasied and joined' toolbar buttons.
 7. Allow 'menus' of non-editable combos to be rounded.
 8. Turn config dialog's 'whats this' help messages into tooltips.
 9. Remove box around arrow in listview lines - to match Gtk better.
10. Remove 'new' listview lines setting - always use 'older' style.
11. Add warning about opacity settings and compiz.
12. Fix drawing of background images onto titlebar.

1.7.0
-----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
 3. Use popup menu gradient's border setting to determine border type of menus.
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
 6. If not rounding, enable all 'square' options.
 7. Store background colour setting in XProperty - so that this can be used by
    QtCurve kwin decoration.
 8. Add position setting for background image; top left, top middle, top right,
    bottom left, bottom middle, bottom right, left middle, right middle, and centred.
 9. Use square tooltips by default. (Problems have been reported with Pidgin and